<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/adEditText"
        android:hint="@string/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
     
    <EditText 
        android:id="@+id/aciklamaEditText"
        android:hint="@string/aciklama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <Button
            android:id="@+id/kaydetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/kaydetButton" />
        
        <Button
            android:id="@+id/guncelleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/guncelleButton" />
        
        <Button
            android:id="@+id/silButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/silButton" />
    </LinearLayout>
    
    <ListView 
        android:id="@+id/sozlukListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice"	
        >
        
    </ListView>
</LinearLayout>
